--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -22,7 +22,6 @@
     align-items: center;
     gap: 5rem;
     background-color: #f0f0f2;
-    height: 100vh;
     overflow: hidden;
 
 }
@@ -30,13 +29,15 @@ h1{
     font-weight: 1000;
     height: 120px;
     font-size: 50px;
+    font-family: "Josefin Sans", sans-serif;
 }
 .banner-right{
     display: flex;
     align-items: center;
 }
-p{
+.banner-left p{
     margin-top: 50px;
+    font-family: "Roboto", sans-serif;
 }
 .shop-btn{
     background-color: #4a4a4b;
@@ -45,9 +46,11 @@ p{
     color: white;
     border: none;
     font-weight: 700;
+    font-family: "Josefin Sans", sans-serif;
+    position: relative;
 }
 
-.head{
+.head-1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,8 +60,9 @@ p{
 h2{
     font-weight: 1000;
     font-size: 50px;
+    font-family: "Josefin Sans", sans-serif;
 }
-.cards{
+.popular-items-cards{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,4 +93,181 @@ h2{
     color: white;
     padding: 15px 50px;
     font-weight: 700;
+}
+.nav-mid ul li::before{
+    font-family: "Josefin Sans", sans-serif;
+}
+.nav-mid ul li.hover::before{
+    color: #ff2020;
+}
+
+.angry-grid {
+    display: grid; 
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 0px;
+    height: 100%;  
+ }
+   
+ #item-0 {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 3;
+    grid-column-end: 3; 
+ }
+ #item-1 {
+    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-row-end: 3;
+    grid-column-end: 4;
+    
+ }
+ #item-2 {
+    grid-row-start: 1;
+    grid-column-start: 4;
+    grid-row-end: 2;
+    grid-column-end: 5;
+    
+ }
+ #item-3 {
+    grid-row-start: 2;
+    grid-column-start: 4;
+    grid-row-end: 3;
+    grid-column-end: 5;
+    
+ }
+ #item-3{
+    padding-top: 19px;
+ }
+
+ .new-arrivals-cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+ }
+ .head-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10rem;
+ }
+
+ .new-arrivals-cards .col-4{
+    padding-left: 15px;
+    padding-right: 15px;
+ }
+
+ .new-arrivals-cards .row{
+    margin-bottom: 10rem;
+ }
+ .new-arrivals-cards p{
+    color: #ff2020;
+ }
+ .banner-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+    margin-top: 10rem;
+
+ }
+.banner-left-2 p{
+    font-family: "Roboto", sans-serif;
+    color: #777; 
+}
+.popular-items-cards p{
+    color: #777;
+}
+.show-btn{
+    background-color: #ff2020;
+    border: none;
+    margin-top: 2rem;
+    color: white;
+    padding: 15px 50px;
+    font-weight: 700;
+}
+.banner-3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+    margin-top: 8rem;
+
+}
+.system{
+    background-color: #ff2020;
+    max-width: 1100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+    margin: 10rem auto;
+    color: white;
+}
+.system p{
+    color: #d3d1d1;
+    font-family: "Roboto", sans-serif;
+    padding: 1,5rem 0;
+    font-weight: normal;
+}
+.system .col-4 i{
+   margin-bottom: 2rem; 
+}
+
+
+#footer ul li{
+    list-style: none;
+    text-decoration: none;
+    
+}
+#footer ul li a{
+    color: #777;
+    text-decoration: none;
+    line-height: 2rem;
+}
+#footer p{
+    margin-top: 2rem;
+    line-height: 2rem;
+}
+
+.popular-items-cards img, .new-arrivals-cards img, .angry-grid img{
+    width: 100%;
+}
+#footer{
+    margin-bottom: 10rem;
+}
+.shop-btn::before {
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    content: "SHOP NOW";
+    display: block;
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    inset: 0 0 0 0;
+    background-color: #ff2020;
+    z-index: 2;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.shop-btn:hover::before{
+    transform: scaleX(1);
+    transition: 0.5s;
+    align-items: center ;
+    display: flex;
+    justify-content: center;
+ 
+}
+.new-arrivals-cards .col-4 img:hover{
+    transform: scale(1.1);
+    transition: 1s;
+}
+.photo{
+    overflow: hidden;
+}
+.popular-items-cards .col-4 img{
+    border-bottom: 3px solid #ff2020;
+    position: relative;
 }
